first and second sections

--- a/index.html
+++ b/index.html
@@ -59,6 +59,36 @@
 			</div>
 		</header>
 
+		<section class="first">
+			<img src="./images/system_img/First_section/Chicken.png" alt="" class="first__bg-img">
+			<div class="first__wrap">
+				<h1 class="first__title">КУРОЧКА ГРИЛЬ
+					ПРЯМО В ЦЕНТРЕ кИЕВА</h1>
+				<button class="first__button">ПОПРОБУЙ</button>
+			</div>
+		</section>
+
+		<section class="second">
+			<div class="second__wrap">
+				<h2 class="second__title">лучший выбор</h2>
+				<div class="second__items">
+					<div class="second__item item">
+						<div class="item__img"><img src="./images/system_img/Second_section/Img of beer'n'Chiken-min.png"
+								alt=""></div>
+						<div class="item__body">
+							<div class="item__description">
+								<p>курочка гриль</p>
+								<p>+</p>
+								<p>1 литр крафтового пива</p>
+							</div>
+							<p class="item__price">ВСЕГО ЗА 199 ГРН</p>
+							<button class="item__button">ЗАКАЗАТЬ</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
 	</div>
 
 
