--- a/index.html
+++ b/index.html
@@ -89,6 +89,324 @@
 			</div>
 		</section>
 
+		<section class="third">
+			<div class="third__wrap">
+				<div class="third__items">
+					<h3 class="third__title">наши блюда</h3>
+					<div class="third__items-wrap">
+						<div class="third__item item-third">
+							<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+							<p class="item-third__name">курица</p>
+							<div class="item-third__price-weight">
+								<span class="item-third__weight">320 грамм</span>
+								<span class="item-third__price">120 грн</span>
+							</div>
+							<div class="item-third__count-wrap">
+								<button class="item-third__count-btn">+</button>
+								<p class="item-third__count-value">99</p>
+								<button class="item-third__count-btn">-</button>
+							</div>
+							<button class="item-third__add-btn">ДОБАВИТЬ</button>
+						</div>
+						<div class="third__item item-third">
+							<div class="item-third__img ibg"><img src="images/system_img/Third_section/02.png" alt=""></div>
+							<p class="item-third__name">КРАФТОВОЕ пиво “ЦИПА”</p>
+							<div class="item-third__price-weight">
+								<span class="item-third__weight">1 литр</span>
+								<span class="item-third__price">120 грн</span>
+							</div>
+							<button class="item-third__add-btn">ПОДРОБНЕЙ</button>
+						</div>
+					</div>
+					<div class="third__items">
+						<h3 class="third__title">Соусы</h3>
+
+						<div class="third__items-wrap">
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+							<div class="third__item item-third">
+								<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+								<p class="item-third__name">курица</p>
+								<div class="item-third__price-weight">
+									<span class="item-third__weight">320 грамм</span>
+									<span class="item-third__price">120 грн</span>
+								</div>
+								<div class="item-third__count-wrap">
+									<button class="item-third__count-btn">+</button>
+									<p class="item-third__count-value">99</p>
+									<button class="item-third__count-btn">-</button>
+								</div>
+								<button class="item-third__add-btn">ДОБАВИТЬ</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<a href="" class="third__link">ПЕРЕЙТИ В КОРЗИНУ</a>
+				<div class="third__info-block info-third">
+					<div class="info-third__img"><img src="images/system_img/Third_section/03.png" alt=""></div>
+					<div class="info-third__body">
+						<h4 class="info-third__title">курочка фирменная</h4>
+						<p class="info-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
+							dapibus non ex eu, cursus lobortis sem. Nunc accumsan, diam vitae viverra efficitur, quam nunc
+							pretium mauris, id auctor odio nulla dignissim diam.</p>
+					</div>
+				</div>
+				<div class="third__info-block info-third">
+					<div class="info-third__img"><img src="images/system_img/Third_section/04.png" alt=""></div>
+					<div class="info-third__body">
+						<h4 class="info-third__title">крафтовое пиво</h4>
+						<p class="info-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
+							dapibus non ex eu, cursus lobortis sem. Nunc accumsan, diam vitae viverra efficitur, quam nunc
+							pretium mauris, id auctor odio nulla dignissim diam.</p>
+					</div>
+				</div>
+				<h3 class="third__title">зона доставки</h3>
+				<img src="images/system_img/Third_section/map.png" alt="" class="third__map">
+				<h3 class="third__title">грилькурьер</h3>
+				<div class="third__buttons">
+					<button class="third__link">ЗАКАЗАТЬ ПО ТЕЛЕФОНУ</button>
+					<button class="third__link">ЗАКАЗАТЬ ЧЕРЕЗ ТЕЛЕГРАМ</button>
+
+				</div>
+			</div>
+		</section>
+
 	</div>
 
 
