--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<!-- Настройки вьюпорта для адекватного адаптива -->
 	<meta name="viewport" content="width=divice-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 	<!-- Подключение CSS файлов -->
 	<link rel="stylesheet" href="css/style.css" />
 
@@ -72,6 +72,32 @@
 			<div class="second__wrap">
 				<h2 class="second__title">лучший выбор</h2>
 				<div class="second__items">
+					<div class="second__item item">
+						<div class="item__img"><img src="./images/system_img/Second_section/Img of beer'n'Chiken-min.png"
+								alt=""></div>
+						<div class="item__body">
+							<div class="item__description">
+								<p>курочка гриль</p>
+								<p>+</p>
+								<p>1 литр крафтового пива</p>
+							</div>
+							<p class="item__price">ВСЕГО ЗА 199 ГРН</p>
+							<button class="item__button">ЗАКАЗАТЬ</button>
+						</div>
+					</div>
+					<div class="second__item item">
+						<div class="item__img"><img src="./images/system_img/Second_section/Img of beer'n'Chiken-min.png"
+								alt=""></div>
+						<div class="item__body">
+							<div class="item__description">
+								<p>курочка гриль</p>
+								<p>+</p>
+								<p>1 литр крафтового пива</p>
+							</div>
+							<p class="item__price">ВСЕГО ЗА 199 ГРН</p>
+							<button class="item__button">ЗАКАЗАТЬ</button>
+						</div>
+					</div>
 					<div class="second__item item">
 						<div class="item__img"><img src="./images/system_img/Second_section/Img of beer'n'Chiken-min.png"
 								alt=""></div>
@@ -398,12 +424,15 @@
 				</div>
 				<h3 class="third__title">зона доставки</h3>
 				<img src="images/system_img/Third_section/map.png" alt="" class="third__map">
-				<h3 class="third__title">грилькурьер</h3>
-				<div class="third__buttons">
-					<button class="third__link">ЗАКАЗАТЬ ПО ТЕЛЕФОНУ</button>
-					<button class="third__link">ЗАКАЗАТЬ ЧЕРЕЗ ТЕЛЕГРАМ</button>
+				<div class="third__footer">
+					<h3 class="third__title">грилькурьер</h3>
+					<div class="third__buttons">
+						<button class="third__link">ЗАКАЗАТЬ ПО ТЕЛЕФОНУ</button>
+						<button class="third__link">ЗАКАЗАТЬ ЧЕРЕЗ ТЕЛЕГРАМ</button>
 
+					</div>
 				</div>
+
 			</div>
 		</section>
 
@@ -413,6 +442,7 @@
 	<!-- Подключение JS файлов -->
 	<!-- Jquery -->
 	<script src="js/jquery-3.5.0.min.js"></script>
+	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 	<!-- Main script file -->
 	<script src="js/script.js"></script>
