--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 
 	<!-- Настройки вьюпорта для адекватного адаптива -->
 	<meta name="viewport" content="width=divice-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 	<!-- Подключение CSS файлов -->
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/style.css" />
 
 </head>
@@ -21,7 +23,7 @@
 	<!-- Внешняя оболочка -->
 	<div class="wrapper">
 
-		<header class="header">
+		<header class="header" data-aos="fade-down" data-aos-duration="1000">
 
 			<div class="header__container">
 				<p class="header__burger"><span></span></p>
@@ -97,17 +99,18 @@
 
 		</div>
 		<section class="first">
-			<img src="./images/system_img/First_section/Chicken.png" alt="" class="first__bg-img">
+			<img src="./images/system_img/First_section/Chicken.png" alt="" class="first__bg-img" data-aos-duration="1000"
+				data-aos-delay="1000">
 			<div class="first__wrap">
-				<h1 class="first__title">КУРОЧКА ГРИЛЬ
+				<h1 class="first__title" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="800">КУРОЧКА ГРИЛЬ
 					ПРЯМО В ЦЕНТРЕ кИЕВА</h1>
-				<button class="first__button">ПОПРОБУЙ</button>
+				<button class="first__button" data-aos="zoom-in" data-aos-delay="1200">ПОПРОБУЙ</button>
 			</div>
 		</section>
 
 		<section class="second">
 			<div class="second__wrap">
-				<h2 class="second__title">лучший выбор</h2>
+				<h2 class="second__title" data-aos="fade-up">лучший выбор</h2>
 				<div class="second__items">
 					<div class="second__item item">
 						<div class="item__img"><img src="./images/system_img/Second_section/Img of beer'n'Chiken-min.png"
@@ -440,14 +443,14 @@
 						</div>
 					</div>
 				</div>
-				<a href="" class="third__link">ПЕРЕЙТИ В КОРЗИНУ</a>
+				<a href="" class="third__link" data-aos="fade-up">ПЕРЕЙТИ В КОРЗИНУ</a>
 				<div class="third__info-block info-third">
-					<div class="info-third__img">
+					<div class="info-third__img" data-aos="fade-right">
 						<img src="images/system_img/Third_section/03.png" alt="">
 						<h4 class="info-third__title info-third__title--mobile">курочка фирменная</h4>
 
 					</div>
-					<div class="info-third__body">
+					<div class="info-third__body" data-aos="fade-left">
 						<h4 class="info-third__title">курочка фирменная</h4>
 						<p class="info-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
 							dapibus non ex eu, cursus lobortis sem. Nunc accumsan, diam vitae viverra efficitur, quam nunc
@@ -459,13 +462,13 @@
 						pretium mauris, id auctor odio nulla dignissim diam.</p>
 				</div>
 				<div class="third__info-block info-third">
-					<div class="info-third__img">
+					<div class="info-third__img" data-aos="fade-left">
 						<h4 class="info-third__title info-third__title--mobile">крафтовое пиво</h4>
 
 						<img src="images/system_img/Third_section/04.png" alt="">
 
 					</div>
-					<div class="info-third__body">
+					<div class="info-third__body" data-aos="fade-right">
 						<h4 class="info-third__title">крафтовое пиво</h4>
 						<p class="info-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
 							dapibus non ex eu, cursus lobortis sem. Nunc accumsan, diam vitae viverra efficitur, quam nunc
@@ -476,13 +479,13 @@
 						dapibus non ex eu, cursus lobortis sem. Nunc accumsan, diam vitae viverra efficitur, quam nunc
 						pretium mauris, id auctor odio nulla dignissim diam.</p>
 				</div>
-				<h3 class="third__title">зона доставки</h3>
+				<h3 class="third__title" data-aos="fade-up">зона доставки</h3>
 				<img src="images/system_img/Third_section/map.png" alt="" class="third__map">
 				<div class="third__footer">
-					<h3 class="third__title">грилькурьер</h3>
+					<h3 class="third__title" data-aos="fade-up">грилькурьер</h3>
 					<div class="third__buttons">
-						<button class="third__link">ЗАКАЗАТЬ ПО ТЕЛЕФОНУ</button>
-						<button class="third__link">ЗАКАЗАТЬ ЧЕРЕЗ ТЕЛЕГРАМ</button>
+						<button class="third__link" data-aos="fade-left">ЗАКАЗАТЬ ПО ТЕЛЕФОНУ</button>
+						<button class="third__link" data-aos="fade-right">ЗАКАЗАТЬ ЧЕРЕЗ ТЕЛЕГРАМ</button>
 
 					</div>
 				</div>
@@ -497,7 +500,7 @@
 	<!-- Jquery -->
 	<script src="js/jquery-3.5.0.min.js"></script>
 	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
+	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<!-- Main script file -->
 	<script src="js/script.js"></script>
 </body>
