fix ofset first btn

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<div class="first__wrap">
 				<h1 class="first__title" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="800">КУРОЧКА ГРИЛЬ
 					ПРЯМО В ЦЕНТРЕ кИЕВА</h1>
-				<button class="first__button" data-aos="zoom-in" data-aos-delay="1200">ПОПРОБУЙ</button>
+				<button class="first__button" data-aos="zoom-in" data-aos-delay="1200" data-aos-offset="0">ПОПРОБУЙ</button>
 			</div>
 		</section>
 
