--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 	<link rel="stylesheet" href="css/style.css" />
 
 </head>
@@ -161,8 +162,9 @@
 					<h3 class="third__title">наши блюда</h3>
 					<div class="third__items-wrap">
 						<div class="third__item item-third">
-							<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
-							<p class="item-third__name">курица</p>
+							<a href="popup-first" class="item-third__img ibg popup__link"><img
+									src="images/system_img/Third_section/01.png" alt=""></a>
+							<a href="popup-first" class="item-third__name popup__link">курица</a>
 							<div class="item-third__price-weight">
 								<span class="item-third__weight">320 грамм</span>
 								<span class="item-third__price">120 грн</span>
@@ -175,13 +177,14 @@
 							<button class="item-third__add-btn">ДОБАВИТЬ</button>
 						</div>
 						<div class="third__item item-third">
-							<div class="item-third__img ibg"><img src="images/system_img/Third_section/02.png" alt=""></div>
-							<p class="item-third__name">КРАФТОВОЕ пиво “ЦИПА”</p>
+							<a href="popup-second" class="item-third__img ibg popup__link"><img
+									src="images/system_img/Third_section/02.png" alt=""></a>
+							<a href="popup-second" class="item-third__name popup__link">КРАФТОВОЕ пиво “ЦИПА”</a>
 							<div class="item-third__price-weight">
 								<span class="item-third__weight">1 литр</span>
 								<span class="item-third__price">120 грн</span>
 							</div>
-							<button class="item-third__add-btn">ПОДРОБНЕЙ</button>
+							<button href="popup-second" class="item-third__add-btn popup__link">ПОДРОБНЕЙ</и>
 						</div>
 					</div>
 					<div class="third__items">
@@ -493,6 +496,59 @@
 			</div>
 		</section>
 
+		<div class="popup-black"></div>
+
+		<div class="popup" id="popup-first">
+			<div class="popup__content">
+				<img class="popup__close" src="images/system_img/close.png" alt="">
+				<div class="third__item item-third">
+					<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
+					<p class="item-third__name">курица</p>
+					<p class="item-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
+						dapibus non ex eu, cursus lobLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
+						dapibus non ex eu, cursus lobortis sem.</p>
+					<div class="item-third__count-wrap">
+						<button class="item-third__count-btn">+</button>
+						<p class="item-third__count-value">99</p>
+						<button class="item-third__count-btn">-</button>
+					</div>
+					<div class="item-third__price-weight">
+						<span class="item-third__weight">320 грамм</span>
+						<span class="item-third__price">120 грн</span>
+					</div>
+					<button class="item-third__add-btn">ДОБАВИТЬ</button>
+				</div>
+			</div>
+		</div>
+
+		<div class="popup" id="popup-second">
+			<div class="popup__content">
+				<img class="popup__close" src="images/system_img/close.png" alt="">
+				<div class="third__item item-third">
+					<div class="item-third__img ibg"><img src="images/system_img/Third_section/02.png" alt=""></div>
+					<p class="item-third__name">пиво</p>
+					<p class="item-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
+						dapibus non ex eu, cursus lobLorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
+						dapibus non ex eu, cursus lobortis sem.</p>
+					<select class="select" name="select">
+						<option value="1">first</option>
+
+						<option value="2">second</option>
+					</select>
+					<div class="item-third__count-wrap">
+						<button class="item-third__count-btn">+</button>
+						<p class="item-third__count-value">99</p>
+						<button class="item-third__count-btn">-</button>
+					</div>
+					<div class="item-third__price-weight">
+						<span class="item-third__weight">320 грамм</span>
+						<span class="item-third__price">120 грн</span>
+					</div>
+					<button class="item-third__add-btn">ДОБАВИТЬ</button>
+				</div>
+			</div>
+		</div>
+
 	</div>
 
 
@@ -501,6 +557,7 @@
 	<script src="js/jquery-3.5.0.min.js"></script>
 	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 	<!-- Main script file -->
 	<script src="js/script.js"></script>
 </body>
