add fire first block

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
 		</div>
 		<section class="first">
-			<img src="./images/system_img/First_section/Chicken.png" alt="" class="first__bg-img" data-aos-duration="1000"
-				data-aos-delay="1000">
+			<img src="./images/system_img/First_section/Chicken-fire.png" alt="" class="first__bg-img"
+				data-aos-duration="1000" data-aos-delay="1000">
 			<div class="first__wrap">
 				<h1 class="first__title" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="800">КУРОЧКА ГРИЛЬ
 					ПРЯМО В ЦЕНТРЕ кИЕВА</h1>
