--- a/index.html
+++ b/index.html
@@ -100,6 +100,25 @@
 
 		</div>
 		<section class="first">
+			<img src="images/system_img/First_section/Tomato_2.png" alt="" class="parallax-img parallax-img-left-top"
+				data-top="70" data-left="130" style="top: 70px; left: 130px;">
+			<img src="images/system_img/First_section/Basilic_1.png" alt="" class="parallax-img parallax-img-left-top"
+				data-top="170" data-left="0" style="top: 170px; left: 0;">
+
+			<img src="images/system_img/First_section/Tomato_1.png" alt="" class="parallax-img parallax-img-right-top"
+				data-top="70" data-right="100" style="top: 70px; right: 100px;">
+			<img src="images/system_img/First_section/Lemon_2.png" alt="" class="parallax-img parallax-img-right-top"
+				data-top="170" data-right="250" style="top: 170px; right: 250px;">
+
+			<img src="images/system_img/First_section/Lemon_1.png" alt="" class="parallax-img parallax-img-left-bottom"
+				data-bottom="140" data-left="100" style="bottom: 140px; left: 100px;">
+
+
+			<img src="images/system_img/First_section/Basilic_2.png" alt="" class="parallax-img parallax-img-right-bottom"
+				data-bottom="170" data-right="30" style="bottom: 170px; right: 30px;">
+			<img src="images/system_img/First_section/Basilic_3.png" alt="" class="parallax-img parallax-img-right-bottom"
+				data-bottom="-50" data-right="50" style="bottom: -50px; right: 50px;">
+
 			<img src="./images/system_img/First_section/Chicken-fire.png" alt="" class="first__bg-img"
 				data-aos-duration="1000" data-aos-delay="1000">
 			<div class="first__wrap">
