parallex elements appear

--- a/index.html
+++ b/index.html
@@ -101,23 +101,29 @@
 		</div>
 		<section class="first">
 			<img src="images/system_img/First_section/Tomato_2.png" alt="" class="parallax-img parallax-img-left-top"
-				data-top="70" data-left="130" style="top: 70px; left: 130px;">
+				data-top="70" data-left="130" style="top: 70px; left: 130px;" data-aos="fade-down" data-aos-duration="700">
 			<img src="images/system_img/First_section/Basilic_1.png" alt="" class="parallax-img parallax-img-left-top"
-				data-top="170" data-left="0" style="top: 170px; left: 0;">
+				data-top="170" data-left="-30" style="top: 170px; left: -30px;" data-aos="fade-down"
+				data-aos-duration="200">
 
 			<img src="images/system_img/First_section/Tomato_1.png" alt="" class="parallax-img parallax-img-right-top"
-				data-top="70" data-right="100" style="top: 70px; right: 100px;">
+				data-top="70" data-right="100" style="top: 70px; right: 100px;" data-aos="fade-down"
+				data-aos-duration="400">
 			<img src="images/system_img/First_section/Lemon_2.png" alt="" class="parallax-img parallax-img-right-top"
-				data-top="170" data-right="250" style="top: 170px; right: 250px;">
+				data-top="170" data-right="250" style="top: 170px; right: 250px;" data-aos="fade-down"
+				data-aos-duration="1100">
 
 			<img src="images/system_img/First_section/Lemon_1.png" alt="" class="parallax-img parallax-img-left-bottom"
-				data-bottom="140" data-left="100" style="bottom: 140px; left: 100px;">
+				data-bottom="140" data-left="100" style="bottom: 140px; left: 100px;" data-aos="fade-down"
+				data-aos-duration="500">
 
 
 			<img src="images/system_img/First_section/Basilic_2.png" alt="" class="parallax-img parallax-img-right-bottom"
-				data-bottom="170" data-right="30" style="bottom: 170px; right: 30px;">
+				data-bottom="170" data-right="30" style="bottom: 170px; right: 30px;" data-aos="fade-down"
+				data-aos-duration="850">
 			<img src="images/system_img/First_section/Basilic_3.png" alt="" class="parallax-img parallax-img-right-bottom"
-				data-bottom="-50" data-right="50" style="bottom: -50px; right: 50px;">
+				data-bottom="-50" data-right="50" style="bottom: -50px; right: 50px;" data-aos="fade-down"
+				data-aos-duration="1100" data-aos-offset="0">
 
 			<img src="./images/system_img/First_section/Chicken-fire.png" alt="" class="first__bg-img"
 				data-aos-duration="1000" data-aos-delay="1000">
