parallax elements third block

--- a/index.html
+++ b/index.html
@@ -182,8 +182,18 @@
 		</section>
 
 		<section class="third">
+
 			<div class="third__wrap">
 				<div class="third__items">
+					<img src="images/system_img/Second_section/Слой 16-min.png" alt=""
+						class="parallax-img parallax-img-left-top" data-top="350" data-left="100"
+						style="top: 350px; left: 100px;" data-aos="fade-down" data-aos-duration="700">
+					<img src="images/system_img/Second_section/Слой 15-min.png" alt=""
+						class="parallax-img parallax-img-right-top" data-top="40" data-right="-30"
+						style="top: 40px; right: -30px;" data-aos="fade-down" data-aos-duration="700">
+					<img src="images/system_img/Second_section/Слой 13 копия-min.png" alt=""
+						class="parallax-img parallax-img-right-bottom" data-bottom="70" data-right="30"
+						style="bottom: 70px; right: 30px;" data-aos="fade-down" data-aos-duration="700">
 					<h3 class="third__title">наши блюда</h3>
 					<div class="third__items-wrap">
 						<div class="third__item item-third">
