add backend info and change text

--- a/delivery.html
+++ b/delivery.html
@@ -26,7 +26,7 @@
 				<p class="header__burger"><span></span></p>
 
 				<nav class="header__menu">
-					<a href="" class="header__menu-link active">ДОСТАВКА</a>
+					<a href="delivery.html" class="header__menu-link active">ДОСТАВКА</a>
 					<a href="" class="header__menu-link">КОНТАКТИ</a>
 				</nav>
 				<a href="index.html"><img src="images/system_img/Gril_logo.svg" alt="logo" class="header__logo"></a>
@@ -61,7 +61,7 @@
 			</div>
 		</header>
 		<div class="burger__menu">
-			<a href="" class="header__menu-link active">ДОСТАВКА</a>
+			<a href="delivery.html" class="header__menu-link active">ДОСТАВКА</a>
 			<a href="" class="header__menu-link">КОНТАКТИ</a>
 
 			<div class="header__contacts">
@@ -96,81 +96,23 @@
 
 		</div>
 
-		<div class="basket">
-			<h1 class="basket__title">Ваш заказ</h1>
-			<div class="basket__items">
-				<div class="item-basket">
-					<p class="item-basket__name">Курица гриль</p>
-					<p class="item-basket__price">11 200 р.</p>
-					<div class="item-third__count-wrap">
-						<button class="item-third__count-btn">+</button>
-						<p class="item-third__count-value">99</p>
-						<button class="item-third__count-btn">-</button>
-					</div>
-					<button class="item-third__add-btn">ДОБАВИТЬ</button>
-
-				</div>
-				<div class="item-basket">
-					<p class="item-basket__name">Курица гриль</p>
-					<p class="item-basket__price">11 200 р.</p>
-					<div class="item-third__count-wrap">
-						<button class="item-third__count-btn">+</button>
-						<p class="item-third__count-value">99</p>
-						<button class="item-third__count-btn">-</button>
-					</div>
-					<button class="item-third__add-btn">ДОБАВИТЬ</button>
-
-				</div>
-				<div class="item-basket">
-					<p class="item-basket__name">Курица гриль</p>
-					<p class="item-basket__price">11 200 р.</p>
-					<div class="item-third__count-wrap">
-						<button class="item-third__count-btn">+</button>
-						<p class="item-third__count-value">99</p>
-						<button class="item-third__count-btn">-</button>
-					</div>
-					<button class="item-third__add-btn">ДОБАВИТЬ</button>
-
-				</div>
-			</div>
-			<form class="form">
-				<img class="chicken-img" src="images/system_img/chicken.png" alt="">
-				<div class="input-items">
-					<div class="input-wrap">
-						<label for="name" class="label">ИМЯ</label>
-						<input type="text" id="name" class="input">
-					</div>
-					<div class="input-wrap">
-						<label for="street" class="label">уЛИЦА</label>
-						<input type="text" id="street" class="input">
-					</div>
-					<div class="input-wrap">
-						<label for="house" class="label">ДОМ</label>
-						<input type="text" id="house" class="input">
-					</div>
-					<div class="input-wrap">
-						<label for="flat" class="label">КВ</label>
-						<input type="text" id="flat" class="input">
-					</div>
-					<div class="input-wrap">
-						<label for="time" class="label">ВРЕМЯ ДОСТАВКИ</label>
-						<input type="time" id="time" class="input">
-					</div>
-					<div class="input-wrap">
-						<label for="comment" class="label">КОММЕНТАРИЙ</label>
-						<input type="text" id="comment" class="input">
-					</div>
-				</div>
-
-				<button class="btn" type="submit">ЗАКАЗАТЬ</button>
-			</form>
+		<div class="delivery">
+			<h1 class="delivery__title">Доставка i оплата</h1>
+			<p class="delivery__text">Отримати заказ можна двома способами:<br> 1) Безкоштовна - якщо місце заказу
+				знаходиться
+				на відстані 1-го кілометру.<br> 2) На таксі кур‘єром, за тарифами служби уклон (або іньшою на вибір
+				замовника)
+				<br>3) Самовивіз за адресою:<br> Вул. Велика Васильківська 63 паб «Ципа» (М. Олімпійська)
+			</p>
+			<p class="delivery__ps">Оплата переводом на банкIвську картку. Або кур‘эру готIвкою (при доставцI до 1го км).
+			</p>
 		</div>
 	</div>
 
 	<script src="js/jquery-3.5.0.min.js"></script>
 
 	<!-- Main script file -->
-	<script src="js/basket.js"></script>
+	<script src="js/script-err.js"></script>
 </body>
 
 </html>
