--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<p class="header__burger"><span></span></p>
 
 				<nav class="header__menu">
-					<a href="" class="header__menu-link active">ДОСТАВКА</a>
+					<a href="delivery.html" class="header__menu-link">ДОСТАВКА</a>
 					<a href="" class="header__menu-link">КОНТАКТИ</a>
 				</nav>
 				<img src="images/system_img/Gril_logo.svg" alt="logo" class="header__logo">
@@ -65,7 +65,7 @@
 			</div>
 		</header>
 		<div class="burger__menu">
-			<a href="" class="header__menu-link active">ДОСТАВКА</a>
+			<a href="delivery.html" class="header__menu-link">ДОСТАВКА</a>
 			<a href="" class="header__menu-link">КОНТАКТИ</a>
 
 			<div class="header__contacts">
@@ -136,7 +136,7 @@
 
 		<section class="second">
 			<div class="second__wrap">
-				<h2 class="second__title" data-aos="fade-up">лучший выбор</h2>
+				<h2 class="second__title" data-aos="fade-up">спецIальна пропозицIя</h2>
 				<div class="second__items">
 					<div class="second__item item">
 						<div class="item__img"><img src="./images/system_img/Second_section/Img of beer'n'Chiken-min.png"
@@ -148,7 +148,7 @@
 								<p>1 литр крафтового пива</p>
 							</div>
 							<p class="item__price">ВСЕГО ЗА 199 ГРН</p>
-							<button class="item__button">ЗАКАЗАТЬ</button>
+							<button class="item__button">ЗАМОВИТИ</button>
 						</div>
 					</div>
 					<div class="second__item item">
@@ -194,7 +194,7 @@
 					<img src="images/system_img/Second_section/Слой 13 копия-min.png" alt=""
 						class="parallax-img parallax-img-right-bottom" data-bottom="70" data-right="30"
 						style="bottom: 70px; right: 30px;" data-aos="fade-down" data-aos-duration="700">
-					<h3 class="third__title">наши блюда</h3>
+					<!-- <h3 class="third__title">нашi страви</h3>
 					<div class="third__items-wrap">
 						<div class="third__item item-third">
 							<a href="popup-first" class="item-third__img ibg popup__link"><img
@@ -223,7 +223,7 @@
 						</div>
 					</div>
 					<div class="third__items">
-						<h3 class="third__title">Соусы</h3>
+						<h3 class="third__title">бокси з собою</h3>
 
 						<div class="third__items-wrap">
 							<div class="third__item item-third">
@@ -479,9 +479,9 @@
 								<button class="item-third__add-btn">ДОБАВИТЬ</button>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
-				<a href="" class="third__link" data-aos="fade-up">ПЕРЕЙТИ В КОРЗИНУ</a>
+				<a href="" class="third__link" data-aos="fade-up">ПЕРЕЙТИ ДО КОШИКА</a>
 				<div class="third__info-block info-third">
 					<div class="info-third__img" data-aos="fade-right">
 						<img src="images/system_img/Third_section/03.png" alt="">
@@ -489,15 +489,22 @@
 
 					</div>
 					<div class="info-third__body" data-aos="fade-left">
-						<h4 class="info-third__title">курочка фирменная</h4>
-						<p class="info-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
-							dapibus non ex eu, cursus lobortis sem. Nunc accumsan, diam vitae viverra efficitur, quam nunc
-							pretium mauris, id auctor odio nulla dignissim diam.</p>
+						<h4 class="info-third__title">Фiрмова курочка "Grillivery"</h4>
+						<p class="info-third__text">Ми обираємо найсоковитішу курку та маринуємо її 12 годин у особливому
+							соусі за нашим фiрмовим рецептом, котрий ми пiдгледіли у французських кухарiв та модифiкували
+							спецiально для Вас! Це робить м‘ясо ніжним та додає йому особливого смаку! Потім смажемо її у грилі
+							при ідеальній температурі, котра створює можливiсть отримати хрустку скоринку та зберегти м'ясо
+							соковитим з насиченим смаком! На цьому моментi Ви вже повиннi додавати курку до свого кошика! Однак
+							це не все, ми доставимо курку так швидко, що вона ще буде шкварчати у Вас на столi! Скуштуй та
+							впевнись сам!</p>
 					</div>
-					<p class="info-third__text info-third__text--mobile">Lorem ipsum dolor sit amet, consectetur adipiscing
-						elit. Sed sem ligula,
-						dapibus non ex eu, cursus lobortis sem. Nunc accumsan, diam vitae viverra efficitur, quam nunc
-						pretium mauris, id auctor odio nulla dignissim diam.</p>
+					<p class="info-third__text info-third__text--mobile">Ми обираємо найсоковитішу курку та маринуємо її 12
+						годин у особливому соусі за нашим фiрмовим рецептом, котрий ми пiдгледіли у французських кухарiв та
+						модифiкували спецiально для Вас! Це робить м‘ясо ніжним та додає йому особливого смаку! Потім смажемо
+						її у грилі при ідеальній температурі, котра створює можливiсть отримати хрустку скоринку та зберегти
+						м'ясо соковитим з насиченим смаком! На цьому моментi Ви вже повиннi додавати курку до свого кошика!
+						Однак це не все, ми доставимо курку так швидко, що вона ще буде шкварчати у Вас на столi! Скуштуй та
+						впевнись сам!</p>
 				</div>
 				<div class="third__info-block info-third">
 					<div class="info-third__img" data-aos="fade-left">
@@ -508,22 +515,25 @@
 					</div>
 					<div class="info-third__body" data-aos="fade-right">
 						<h4 class="info-third__title">крафтовое пиво</h4>
-						<p class="info-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
-							dapibus non ex eu, cursus lobortis sem. Nunc accumsan, diam vitae viverra efficitur, quam nunc
-							pretium mauris, id auctor odio nulla dignissim diam.</p>
+						<p class="info-third__text">Один з найважливіших інгридієнтів пива - це вода! Крафтова броварня «ципа»
+							знаходиться майже у самому серці Карпат. Та бере свій початок зі справжніх гірських джерел. Тому
+							душа у нашого пива дійсно українська! Ми обираємо якісний німецький солод та кращі сорта хмелю з
+							різних країн. Це додає «Ципі» інтернаціонального смаку та європейської якості! При приготуванні
+							нашого пива використовуються лише природні інгридієнти та консерванти.</p>
 					</div>
-					<p class="info-third__text info-third__text--mobile">Lorem ipsum dolor sit amet, consectetur adipiscing
-						elit. Sed sem ligula,
-						dapibus non ex eu, cursus lobortis sem. Nunc accumsan, diam vitae viverra efficitur, quam nunc
-						pretium mauris, id auctor odio nulla dignissim diam.</p>
+					<p class="info-third__text info-third__text--mobile">Один з найважливіших інгридієнтів пива - це вода!
+						Крафтова броварня «ципа» знаходиться майже у самому серці Карпат. Та бере свій початок зі справжніх
+						гірських джерел. Тому душа у нашого пива дійсно українська! Ми обираємо якісний німецький солод та
+						кращі сорта хмелю з різних країн. Це додає «Ципі» інтернаціонального смаку та європейської якості! При
+						приготуванні нашого пива використовуються лише природні інгридієнти та консерванти.</p>
 				</div>
-				<h3 class="third__title" data-aos="fade-up">зона доставки</h3>
+				<h3 class="third__title" data-aos="fade-up">зона безкоштовноI доставки</h3>
 				<img src="images/system_img/Third_section/map.png" alt="" class="third__map">
 				<div class="third__footer">
 					<h3 class="third__title" data-aos="fade-up">грилькурьер</h3>
 					<div class="third__buttons">
-						<button class="third__link" data-aos="fade-left">ЗАКАЗАТЬ ПО ТЕЛЕФОНУ</button>
-						<button class="third__link" data-aos="fade-right">ЗАКАЗАТЬ ЧЕРЕЗ ТЕЛЕГРАМ</button>
+						<button class="third__link" data-aos="fade-left">ЗАМОВИТИ ТЕЛЕФОНОМ</button>
+						<button class="third__link" data-aos="fade-right">ЗАМОВИТИ ТЕЛЕГРАМОМ</button>
 
 					</div>
 				</div>
@@ -536,7 +546,8 @@
 		<div class="popup" id="popup-first">
 			<div class="popup__content">
 				<img class="popup__close" src="images/system_img/close.png" alt="">
-				<div class="third__item item-third">
+				<div class="popup__wrap"></div>
+				<!-- <div class="third__item item-third">
 					<div class="item-third__img ibg"><img src="images/system_img/Third_section/01.png" alt=""></div>
 					<p class="item-third__name">курица</p>
 					<p class="item-third__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sem ligula,
@@ -552,7 +563,7 @@
 						<span class="item-third__price">120 грн</span>
 					</div>
 					<button class="item-third__add-btn">ДОБАВИТЬ</button>
-				</div>
+				</div> -->
 			</div>
 		</div>
 
