--- a/basket.html
+++ b/basket.html
@@ -99,54 +99,22 @@
 		<div class="basket">
 			<h1 class="basket__title">Ваш заказ</h1>
 			<div class="basket__items">
-				<div class="item-basket">
-					<p class="item-basket__name">Курица гриль</p>
-					<p class="item-basket__price">11 200 р.</p>
-					<div class="item-third__count-wrap">
-						<button class="item-third__count-btn">+</button>
-						<p class="item-third__count-value">99</p>
-						<button class="item-third__count-btn">-</button>
-					</div>
-					<button class="item-third__add-btn">ДОБАВИТЬ</button>
 
-				</div>
-				<div class="item-basket">
-					<p class="item-basket__name">Курица гриль</p>
-					<p class="item-basket__price">11 200 р.</p>
-					<div class="item-third__count-wrap">
-						<button class="item-third__count-btn">+</button>
-						<p class="item-third__count-value">99</p>
-						<button class="item-third__count-btn">-</button>
-					</div>
-					<button class="item-third__add-btn">ДОБАВИТЬ</button>
-
-				</div>
-				<div class="item-basket">
-					<p class="item-basket__name">Курица гриль</p>
-					<p class="item-basket__price">11 200 р.</p>
-					<div class="item-third__count-wrap">
-						<button class="item-third__count-btn">+</button>
-						<p class="item-third__count-value">99</p>
-						<button class="item-third__count-btn">-</button>
-					</div>
-					<button class="item-third__add-btn">ДОБАВИТЬ</button>
-
-				</div>
 			</div>
 			<form class="form">
 				<img class="chicken-img" src="images/system_img/chicken.png" alt="">
 				<div class="input-items">
 					<div class="input-wrap">
 						<label for="name" class="label">ИМЯ</label>
-						<input type="text" id="name" class="input">
+						<input type="text" id="name" class="input" required>
 					</div>
 					<div class="input-wrap">
 						<label for="street" class="label">уЛИЦА</label>
-						<input type="text" id="street" class="input">
+						<input type="text" id="street" class="input" required>
 					</div>
 					<div class="input-wrap">
 						<label for="house" class="label">ДОМ</label>
-						<input type="text" id="house" class="input">
+						<input type="text" id="house" class="input" required>
 					</div>
 					<div class="input-wrap">
 						<label for="flat" class="label">КВ</label>
@@ -154,11 +122,11 @@
 					</div>
 					<div class="input-wrap">
 						<label for="time" class="label">ВРЕМЯ ДОСТАВКИ</label>
-						<input type="time" id="time" class="input">
+						<input type="time" id="time" class="input" required>
 					</div>
 					<div class="input-wrap">
 						<label for="comment" class="label">КОММЕНТАРИЙ</label>
-						<input type="text" id="comment" class="input">
+						<input type="text" id="comment" class="input" required>
 					</div>
 				</div>
 
