add scroll to block

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 			<div class="first__wrap">
 				<h1 class="first__title" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="800">КУРОЧКА ГРИЛЬ
 					ПРЯМО В ЦЕНТРЕ кИЕВА</h1>
-				<button class="first__button" data-aos="zoom-in" data-aos-delay="1200" data-aos-offset="0">ПОПРОБУЙ</button>
+				<button data-link="#third" class="first__button" data-aos="zoom-in" data-aos-delay="1200"
+					data-aos-offset="0">ПОПРОБУЙ</button>
 			</div>
 		</section>
 
@@ -142,7 +143,7 @@
 			</div>
 		</section>
 
-		<section class="third">
+		<section id="third" class="third">
 
 			<div class="third__wrap">
 				<div class="third__items">
